--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Birthday Trivia</title>
+  <title>The Birthday App</title>
   <link href="https://fonts.googleapis.com/css2?family=Fira+Sans:wght@400&family=Merriweather:wght@700&display=swap"
     rel="stylesheet" />
   <link rel="stylesheet" href="./assets/reset.css" />
@@ -13,25 +13,40 @@
   <script src="https://cdn.tailwindcss.com"></script>
   <script src="https://cdn.jsdelivr.net/npm/dayjs@1.11.3/dayjs.min.js"></script>
 </head>
-
 <body>
-  <header class="w-screen font-medium bg-slate-700 text-center p-4 mb-4">
-    <h1 class="w-screen text-5xl text-cyan-100 p-2">Birthday Trivia</h1>
-    <h2 class="text-xl p-2 text-white">Cute sub-heading</h2>
-  </header>
-
-  <div class="border-2 border-black p-2 m-4 flex flex-wrap">
-
-    <div class="border-2 border-orange-600 p-2 m-2 w-1/4">
-      <label for="birthday">Enter your birthday:</label>
-    <input type="date" id="birthday" placeholder="YYYY-MM-DD">
-    <button onclick="storeBirthday()">Submit</button>
-    <p id="result"></p>
+  <div class="bg-white">
+    <div class="mx-auto max-w-7xl py-24 sm:px-6 sm:py-32 lg:px-8">
+      <div class="relative isolate overflow-hidden bg-gray-900 px-6 pt-16 shadow-2xl sm:rounded-3xl sm:px-16 md:pt-24 lg:flex lg:gap-x-20 lg:px-24 lg:pt-0">
+        <svg viewBox="0 0 1024 1024" class="absolute left-1/2 top-1/2 -z-10 h-[64rem] w-[64rem] -translate-y-1/2 [mask-image:radial-gradient(closest-side,white,transparent)] sm:left-full sm:-ml-80 lg:left-1/2 lg:ml-0 lg:-translate-x-1/2 lg:translate-y-0" aria-hidden="true">
+          <circle cx="512" cy="512" r="512" fill="url(#759c1415-0410-454c-8f7c-9a820de03641)" fill-opacity="0.7" />
+          <defs>
+            <radialGradient id="759c1415-0410-454c-8f7c-9a820de03641">
+              <stop stop-color="#7775D6" />
+              <stop offset="1" stop-color="#E935C1" />
+            </radialGradient>
+          </defs>
+        </svg>
+        <!-- The header is contained inside the main-->
+        <div class="mx-auto max-w-md text-center lg:mx-0 lg:flex-auto lg:py-32 lg:text-left">
+          <h1 class="text-4xl font-bold tracking-tight text-white sm:text-5xl">The Birthday App!</h1>
+          <h2 class="text-1xl font-bold tracking-tight text-white sm:text-2xl"><i>Find more reasons to celebrate...</i></h2>
+          <p class="mt-6 text-lg leading-8 text-gray-300">There's always another reason to celebrate.<br>Enter your birthday below to learn what historical events happened on your birthday.</p>
+          <!-- This is the container for User Input-->
+          <div class="mt-10 flex items-center justify-center gap-x-6 lg:justify-start" id="user-input">
+            <label class="mt-6 text-md leading-8 text-gray-300" for="birthday"></label>
+            <input type="date" id="birthday" placeholder="YYYY-MM-DD">
+            <button class="rounded-md bg-white px-3.5 py-2.5 text-sm font-semibold text-gray-900 shadow-sm hover:bg-gray-100 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-white" onclick="storeBirthday()">Submit</button>
+          </div>
+          <div><p class="mt-6 text-lg leading-8 text-gray-300"id="result"></p></div>
+        </div>
+        <!--This is the container for the image-->
+        <div class="relative mt-16 h-80 lg:mt-8">
+          <img class="absolute left-0 top-0 w-[57rem] max-w-none rounded-md bg-white/5 ring-1 ring-white/10" src="./assets/cupcakes.jpg" alt="Pink Cupcakes" width="1824" height="1080">
+        </div>
+      </div>
     </div>
-
-    <div class="border-2 border-orange-600 p-2 m-2 w-2/3">Results</div>
-
-
+  </div>
+  
   </div>
   <script src="./assets/script.js"></script>
 </body>
