--- a/index.html
+++ b/index.html
@@ -48,6 +48,11 @@
   </div>
   
   </div>
+
+  <script src="https://cdn.jsdelivr.net/npm/dayjs@1.11.3/dayjs.min.js"
+      integrity="sha256-iu/zLUB+QgISXBLCW/mcDi/rnf4m4uEDO0wauy76x7U="
+      crossorigin="anonymous">
+  </script>
   <script src="./assets/script.js"></script>
 </body>
 
