added billboard results to HTML dynamically

--- a/index.html
+++ b/index.html
@@ -37,7 +37,8 @@
             <input type="date" id="birthday" placeholder="YYYY-MM-DD">
             <button class="rounded-md bg-white px-3.5 py-2.5 text-sm font-semibold text-gray-900 shadow-sm hover:bg-gray-100 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-white" onclick="storeBirthday()">Submit</button>
           </div>
-          <div><p class="mt-6 text-lg leading-8 text-gray-300"id="result"></p></div>
+          <div><p class="mt-6 text-lg leading-8 text-gray-300"id="result-historical"></p></div>
+          <div><ul class="mt-6 text-lg leading-8 text-gray-300"id="result-billboard"></ul></div>
         </div>
         <!--This is the container for the image-->
         <div class="relative mt-16 h-80 lg:mt-8">
